# StarfishDB-SVI

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  README.md
conf/: README.md  uci_datasets.txt
extras/: README.md
extras/codegen/: CMakeLists.txt
extras/codegen/src/: codegen.cpp
extras/codegen/src/utils/: DebugHelper.cpp  DebugHelper.h
extras/hmmgen/: CMakeLists.txt
extras/hmmgen/src/: hmmgen.cpp
extras/hmmgen/src/utils/: RndUtils.h
extras/hmmgen_py/: create_hmm_datasets.py  eval_hmm_models.py  hmmgen.py
extras/lda_preprocess/: CMakeLists.txt  get_uci_datasets.sh
extras/lda_preprocess/src/: Vocabulary.cpp  lda_preprocess.cpp
extras/lda_preprocess/src/Utils/: TimeThis.cpp  TimeThis.h
extras/lda_wiki_preprocess/: CMakeLists.txt
extras/lda_wiki_preprocess/src/: Vocabulary.cpp  Vocabulary.h  clean.cpp  clean.h  lda_wiki_preprocess.cpp  split.cpp
extras/lda_wiki_preprocess/src/Utils/: DebugHelper.h  RndUtils.cpp
extras/svi_lda_preprocess/: CMakeLists.txt
extras/svi_lda_preprocess/src/: svi_lda_preprocess.cpp
gensim_experiments/: CMakeLists.txt
gensim_experiments/conf/: datadir_redirect.txt  texlive.profile
gensim_experiments/extras/lda_preprocess/src/: DocWordFileParser.cpp  DocWordFileParser.h  Vocabulary.h  lda_preprocess.cpp
gensim_experiments/extras/lda_preprocess/src/Utils/: RndUtils.h
gensim_experiments/patches/: clangjit.patch
gensim_experiments/scripts/: build_gensim_lda_docker_img.sh  clean_all_deps.sh  create_gensim_lda_docker_cont.sh  gensim_lda_test.py  get_deps.sh  get_uci_datasets.sh  loglik2perp.py  mergeLoglikFiles.py  run_gensim.sh  run_gensim_benchmark.sh
gensim_experiments/scripts/dockerfiles/devenv/: gensim_Dockerfile
patches/: mallet.patch
report/: 100TopicsExpReport.tex  20TopicsExpReport.tex  50TopicsExpReport.tex  FinalPlots.tex  create100TopicsReport.sh  create20TopicsReport.sh  create50TopicsReport.sh
scripts/: build_devenv_docker_img.sh  build_reproenv_docker_img.sh  clean_all_deps.sh  create_devenv_docker_cont.sh  create_reproenv_docker_cont.sh  genplotdata.py  get_deps.sh  get_uci_datasets.sh  get_wiki_dataset.sh  main_script.sh  make_plots.sh  mergeLoglikFiles.py  run_gammapdb_lda.sh  run_hmm_benchmarks.sh  run_lda_benchmarks.sh  run_lda_benchmarksP100.sh  run_lda_benchmarksP200.sh  run_lda_benchmarksP50.sh  run_mallet.sh  run_vi.sh  run_vi_benchmark100.sh  run_vi_benchmark200.sh  run_vi_benchmark50.sh  temp.sh
scripts/dockerfiles/devenv/: Dockerfile
scripts/dockerfiles/reproenv/: Dockerfile
src/: Atom.h  BDExpr.h  BDExpr2.h  BDExpr3.h  BDSet.h  BDSetP.h  Internal_State.h  ReadData.cpp  ReadData.h  SamplerExecutionContext.h  SavingMalletState.h  Svi_Template.h  Tau.h  VIDie.h  ViUtils.h  VrdExprLiterals.h  VrdExprOperators.h  gammapdb_arrow.cpp  main.cpp
src/hmm/: HmmPlanBuilder.h  InMemoryHmmPlanNode.h
src/lda/: GibbsSinkNodeConsumer.h  InMemoryGibbsPlanNode.h  InMemoryGibbsPlanNodeP.h  LdaPlanBuilder.h  Vocabulary.cpp  Vocabulary.h
src/lda_svi/: InMemorySVIPlanNode.h  LdaSVIPlanBuilder.h  MappingReader.cpp  MappingReader.h
src/utils/: Atomwrapper.h  DebugHelper.cpp  DebugHelper.h  RndUtils.cpp  RndUtils.h  TimeThis.cpp  TimeThis.h  argparse.hpp
test/: run_all_tests.cpp  test_BDSet.cpp
